2018-11-17  Marc A. Smith  <marc.smith@parodyne.com>

	enabled most Virtio drivers in kernel config

2018-11-06  Marc A. Smith  <marc.smith@parodyne.com>

	rc.iscsid: hide the nohup message/output in start(); updated the ocf:esos:alua and ocf:esos:scst resource agents to support specifying the remote node inactive/offline ALUA state as a RA parameter; usb_sync.sh: added the '--update' flag for the initial call to rsync which should prevent clobbering files that already exist and are newer in the cpio image (after extraction)

2018-11-04  Marc A. Smith  <marc.smith@parodyne.com>

	added the 'issue_lip' parameter to the ocf:esos:scst and ocf:esos:alua resource agents to make issuing a FC LIP optional (some initiators work better with target-side LIP's during transition, and others don't)

	modprobe.conf: set qlini_mode="disabled" for the SCST in-tree qla2xxx driver as well; rc.iscsid: background the --loginall command in start() and don't exit with 1 for --logoutall in stop(); increased the max number of CPU's to 128 in the kernel config; several updates/improvements in the ocf:esos:alua RA (use flock to keep concurrency sane when adding/removing LUN maps for the interal redirection target, use --rescan with iscsiadm in several spots to re-establish the block device operation, check the block device with test_if_dev_ready())

2018-10-29  Marc A. Smith  <marc.smith@parodyne.com>

	updated sg3_utils to version 1.44; updated nvme-cli to version 1.6

2018-10-25  Marc A. Smith  <marc.smith@parodyne.com>

	fixed a typo in the 'image' Makefile target and updated several lines to be more verbose; normalized some kernel options after several were enabled recently for DMA

	updated mdadm to version 4.1
