@@ -1,4 +1,6 @@
-2018-11-17  Marc A. Smith  <marc.smith@parodyne.com>
+2018-11-18  Marc A. Smith  <marc.smith@parodyne.com>
+
+	Makefile.in: build fixes for new ATTO Celerity Gen6 FC driver version; etc/rc.d/rc.d: ATTO FC driver now installs to the extra/ module directory
 
 	enabled most Virtio drivers in kernel config
 
